--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Montserrat";
+    font-family: 'Montserrat', sans-serif;
 }
 
 body{
@@ -28,7 +28,7 @@ header{
 .logo {
     text-transform: uppercase;
     color: #fff;
-    font-weight: 200;
+    font-weight: 500;
 }
 
 .menu a{
@@ -216,7 +216,7 @@ header{
 .contacto-texto h6{
     color: #fff;
     font-size: 25px;
-    font-weight: normal;
+    font-weight: 400;
     text-align: center;
 }
 
@@ -316,6 +316,9 @@ header{
         align-self: center;
         background-image: url(./Imagenes/me2.png);
         min-width: 320px;
+    }
+    .sobremi-texto h5{
+        padding-bottom: 0px;
     }
 }
 html{
